lab/ingress/certificate/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1

  selector:
    matchLabels:
      app: httpbin

  template:
    metadata:
      labels:
        app: httpbin

    spec:
      containers:
        - name: httpbin
          image: docker.io/kennethreitz/httpbin:latest

          ports:
            - containerPort: 80
              name: http
              protocol: TCP

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
  
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  type: ClusterIP

  selector:
    app: httpbin

  ports:
    - name: http
      port: 8000
      targetPort: 80
