lab/ingress/certificate/ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-tls
spec:
  ingressClassName: "nginx"

  tls:
    - hosts:
        - httpbin.sandbox.wasp.silvios.me
      secretName: wildcard-certificate
  
  rules:
    - host: httpbin.sandbox.wasp.silvios.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
